...

                <TextView
                    android:id="@+id/text_header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/text_header_descr"
                    android:layout_width="339dp"
                    android:layout_height="39dp"
...

                    <ProgressBar
                        android:id="@+id/progessbar_llm"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="80dp"
...

                        <com.ortiz.touchview.TouchImageView
                            android:id="@+id/imageView_result"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
...

                        <ImageButton
                            android:id="@+id/button_view_right"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
...

                        <ImageButton
                            android:id="@+id/button_view_left"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
...

                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardview_button_show_plant"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
...

                                    <TextView
                                        android:id="@+id/text_button_plantuml"
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
...

                            <TextView
                                android:id="@+id/textView_plantUML"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardview_button_show_adjustments"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
...

                                    <TextView
                                        android:id="@+id/text_button_adjustments"
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
...

                            <EditText
                                android:id="@+id/editText_adjustment"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardview_button_show_response"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
...

                                    <TextView
                                        android:id="@+id/text_button_response"
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
...

                            <TextView
                                android:id="@+id/text_response_llm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <ImageButton
                                android:id="@+id/button_optimize"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
...

                            <ImageButton
                                android:id="@+id/button_save_uml"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
...

                            <androidx.constraintlayout.utils.widget.ImageFilterButton
                                android:id="@+id/button_send_to_llm"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
...
