...
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp"
                app:columnCount="2"
                app:rowCount="2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_class"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="15dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">
...
                            android:textStyle="bold" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_additional"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="15dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">
...
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_comp"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="15dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">
...
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_sequenz"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="15dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">
...
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_activity"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="15dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">
...
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_usecase"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="15dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">
...
