<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_selector"
        android:title="Home" />
    <item
        android:id="@+id/nav_camera"
        android:icon="@drawable/ic_camera_selector"
        android:title="Camera" />
    <item
        android:id="@+id/nav_recommendation"
        android:icon="@drawable/ic_recommendation_selector"
        android:title="Recommendation" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_selector"
        android:title="Settings" />
</menu>