...
                <TextView
                    android:id="@+id/text_header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="Audio"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#272727"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintStart_toStartOf="parent"
...
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <ImageButton
                        android:id="@+id/buttonSwitchToCamera"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:contentDescription="Test"
                        android:scaleType="centerInside"
                        android:src="@drawable/change_camera_basic_svgrepo_com" />
...
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <!-- TextView for displaying transcription -->
                    <EditText
                        android:id="@+id/textTv"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="8"
                        android:hint="Transcription will appear here"
                        android:layout_margin="16dp"
                        android:gravity="top|start"
...
                                app:layout_constraintDimensionRatio="1:1"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <ImageButton
                                    android:id="@+id/voiceBtn"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@color/rot_hell"
                                    android:contentDescription="@string/test"
                                    android:scaleType="centerCrop"
                                    app:srcCompat="@drawable/baseline_mic_24" />
...
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">


                                <ImageButton
                                    android:id="@+id/button_create_new_uml"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="#DD464B"
                                    android:contentDescription="@string/test"
                                    android:scaleType="centerCrop"
                                    app:srcCompat="@drawable/arrow_square_right_svgrepo_com" />
...
